--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "leaguecloser"
-version = "1.0.1"
+version = "1.0.4"
 authors = [
   { name="Giantpizzahead" },
 ]
@@ -15,14 +15,19 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: Microsoft :: Windows",
 ]
+
 dependencies = [
   "psutil",
   "pyautogui",
   "pywin32",
+  "requests",
 ]
 
 [project.urls]
 "Homepage" = "https://github.com/Giantpizzahead/auto-league-closer"
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.pytest.ini_options]
 addopts = [
